[gd_scene load_steps=13 format=3 uid="uid://by5fgbvxh4h1j"]

[ext_resource type="Script" uid="uid://b7umth30q5yfa" path="res://scripts/Login.gd" id="1_opysn"]
[ext_resource type="Texture2D" uid="uid://bspd8qni1fnc" path="res://assets/backgrounds/login.png" id="2_rtkoj"]
[ext_resource type="FontFile" uid="uid://cnu3sa8v30pc0" path="res://assets/fonts/PressStart2P-Regular.ttf" id="3_teljs"]
[ext_resource type="Script" uid="uid://dohbukxsjemtd" path="res://forgot_password_label.gd" id="4_jq82d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0k8l5"]
bg_color = Color(0.85674167, 0.6555, 0.95, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sly8s"]
bg_color = Color(0.94509804, 0.11372549, 0.7411765, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gvc2s"]
bg_color = Color(0.8676824, 0.41544956, 0.69856614, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b6oif"]
bg_color = Color(0.2912, 0.7243599, 0.91, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k02ak"]
bg_color = Color(0.27300003, 0.7188999, 0.91, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5mb7"]
bg_color = Color(0.85490197, 0.654902, 0.9490196, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cpht8"]
bg_color = Color(0.94509804, 0.11372549, 0.7411765, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88a0h"]
bg_color = Color(0.8676824, 0.41544956, 0.69856614, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="AuthScreen" type="Control"]
custom_minimum_size = Vector2(400, 525)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -2.0
offset_right = 5.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_opysn")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -641.0
offset_top = -355.0
offset_right = 632.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rtkoj")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
custom_minimum_size = Vector2(1200, 650)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 41.5
offset_top = 15.0
offset_right = -45.5
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 127.5
offset_top = 118.5
offset_right = 1135.5
offset_bottom = 199.5
theme_override_colors/font_color = Color(0.84313726, 0.1764706, 0.5568628, 1)
theme_override_fonts/font = ExtResource("3_teljs")
theme_override_font_sizes/font_size = 36
text = "REAL LIFE SIMULATION RPG APP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Email" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 178.5
offset_top = 268.5
offset_right = 346.5
offset_bottom = 292.5
theme_override_colors/font_color = Color(0.84313726, 0.1764706, 0.5568628, 1)
theme_override_fonts/font = ExtResource("3_teljs")
theme_override_font_sizes/font_size = 24
text = "Email :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 173.5
offset_top = 339.5
offset_right = 413.5
offset_bottom = 363.5
theme_override_colors/font_color = Color(0.84313726, 0.1764706, 0.5568628, 1)
theme_override_fonts/font = ExtResource("3_teljs")
theme_override_font_sizes/font_size = 24
text = "Password :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Login_Button" type="Button" parent="NinePatchRect"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 0
offset_left = 540.5
offset_top = 466.5
offset_right = 776.5
offset_bottom = 526.5
theme_override_colors/font_color = Color(0.84313726, 0.1764706, 0.5568628, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.4117647, 0.1764706, 0.5568628, 1)
theme_override_colors/font_hover_color = Color(0.5372549, 0.28235295, 0.9490196, 1)
theme_override_fonts/font = ExtResource("3_teljs")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_0k8l5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sly8s")
theme_override_styles/hover = SubResource("StyleBoxFlat_gvc2s")
text = "Login"

[node name="EmailLineEdit" type="LineEdit" parent="NinePatchRect"]
custom_minimum_size = Vector2(350, 45)
layout_mode = 0
offset_left = 484.5
offset_top = 254.5
offset_right = 834.5
offset_bottom = 299.5
theme_override_colors/font_color = Color(0.4117647, 0.1764706, 0.5568628, 1)
theme_override_fonts/font = ExtResource("3_teljs")
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxFlat_b6oif")
placeholder_text = "Email"

[node name="PasswordLineEdit" type="LineEdit" parent="NinePatchRect"]
custom_minimum_size = Vector2(350, 45)
layout_mode = 0
offset_left = 484.5
offset_top = 324.5
offset_right = 834.5
offset_bottom = 369.5
theme_override_colors/font_color = Color(0.39215687, 0.20392157, 0.6, 1)
theme_override_fonts/font = ExtResource("3_teljs")
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxFlat_k02ak")
placeholder_text = "Password"
secret = true
secret_character = ""

[node name="Acc_Button" type="Button" parent="NinePatchRect"]
custom_minimum_size = Vector2(380, 60)
layout_mode = 0
offset_left = 462.5
offset_top = 556.5
offset_right = 842.5
offset_bottom = 616.5
theme_override_colors/font_color = Color(0.84313726, 0.1764706, 0.5568628, 1)
theme_override_colors/font_pressed_color = Color(0.4117647, 0.1764706, 0.5568628, 1)
theme_override_colors/font_hover_color = Color(0.5372549, 0.28235295, 0.9490196, 1)
theme_override_fonts/font = ExtResource("3_teljs")
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxFlat_a5mb7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cpht8")
theme_override_styles/hover = SubResource("StyleBoxFlat_88a0h")
text = "Create Account"

[node name="ForgotPasswordLabel" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 776.5
offset_top = 401.5
offset_right = 1128.5
offset_bottom = 424.5
mouse_filter = 0
theme_override_colors/font_color = Color(0.84313726, 0.1764706, 0.5568628, 1)
theme_override_fonts/font = ExtResource("3_teljs")
theme_override_font_sizes/font_size = 22
text = "Forgot Password?"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_jq82d")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="NinePatchRect/Acc_Button" to="." method="_on_acc_button_pressed"]
